<resources>
    <string name="app_name">İlaç Rehberi</string>
    <string name="baslik">Ecza Dolabına Hoşgeldiniz !</string>
    <string name="aciklama">by erkocakenes@gmail.com</string>
    <string name="ilac_ismi">Ilac Ismi</string>
    <string name="g_rsele_t_klayarak_alarm_ekleyin">Görsele Tıklayarak Alarm Ekleyin !</string>
    <string name="la_kaydetmek_asl_nda_ok_kolay">İlaç Kaydetmek Aslında Çok Kolay!</string>
    <string name="bu_ila_a_a_daki_semptomlar_n_tedavisinde_kullan_l_r">Bu ilaç aşağıdaki semptomların tedavisinde kullanılır:</string>
    <string name="la_rehberine_ho_geldiniz">İlaç Rehberine Hoşgeldiniz!..</string>
    <string name="a_a_da_bulunan_miad_uyar_s_resi_k_sm_na">Aşağıda Bulunan Miad Uyarı Süresi Kısmına !!</string>
    <string name="ecza_dolab_n_zdaki_son_kullan_m_tarihi_yakla_an_ila_lar_n_z_n_size_ka_ay_kala_hat_rlat_lmas_n_istiyorsan_z_o_de_eri_girmelisiniz">Ecza Dolabınızdaki Son Kullanım Tarihi yaklaşan ilaçlarınızın, size; kaç ay kala hatırlatılmasını istiyorsanız, o değeri girmelisiniz..</string>
    <string name="herhangi_bir_de_er_girmemeniz_durumunda_sistem_otomatik_olarak_3_ay_90_g_n_kala_miad_yakla_an_la_olarak_sizi_bilgilendirecektir">Herhangi bir değer girmemeniz durumunda, sistem otomatik olarak; 3 ay (90 gün) kala \'Miadı Yaklaşan İlaç\' olarak sizi bilgilendirecektir..</string>
    <string name="miad_uyari_s_resi_ay">Miad Uyari Süresi (Ay) :</string>
    <string name="kaydet">Kaydet</string>
    <string name="la_smi">İlaç İsmi :</string>
    <string name="barkodu">Barkodu :</string>
    <string name="ilac_barkod">Ilac Barkod</string>
    <string name="etken_maddesi">Etken Maddesi:</string>
    <string name="ilac_etken_madde">Ilac Etken Madde</string>
    <string name="retici_firma">Üretici Firma :</string>
    <string name="ilac_uretici_firma">Ilac Uretici Firma</string>
    <string name="re_ete_t_r">Reçete Türü :</string>
    <string name="ilac_recete_turu">Ilac Recete Turu</string>
    <string name="faydalar">Faydaları :</string>
    <string name="ilac_endikasyon">Ilac Endikasyon</string>
    <string name="sa_l_k_merkezi_smi_giriniz">Sağlık Merkezi İsmi Giriniz</string>
    <string name="rehberime_ekle">Rehberime Ekle</string>
    <string name="rehberimden_sil">Rehberimden Sil</string>
    <string name="la_rehberi">İlaç Rehberi</string>
    <string name="la_lar_n_z_bulun_ve_kaydedin">İlaçlarınızı bulun ve kaydedin.</string>
    <string name="dolab_m">Dolabım</string>
    <string name="ecza">Ecza</string>
    <string name="k_t_phanem">Kütüphanem</string>
    <string name="la">İlaç</string>
    <string name="t_m_la_lar">Tüm İlaçlar</string>
    <string name="miad_nyakla_anlar">Miadı\nYaklaşanlar</string>
    <string name="miad_nge_enler">Miadı\nGeçenler</string>
    <string name="yeni_la_ekle">Yeni İlaç Ekle</string>
    <string name="la_barkodu">İlaç Barkodu</string>
    <string name="la_ad">İlaç Adı</string>
    <string name="la_faydalar">İlaç Faydaları</string>
    <string name="son_kullanma_tarihi">Son Kullanma Tarihi</string>
    <string name="la_k_t_phanem">İLAÇ KÜTÜPHANEM</string>
    <string name="lac_sil">İlacı Sil</string>
    <string name="se_ti_iniz_ila_listenizden_silinecektir_sildi_iniz_ilac_tekrar_sisteme_kay_t_etmeniz_gerekecektir">Seçtiğiniz ilaç listenizden silinecektir. Sildiğiniz ilacı tekrar sisteme kayıt etmeniz gerekecektir.</string>
    <string name="hay_r_ilac_silme">Hayır, ilacı silme</string>
    <string name="son_kullan_m_tarihi">Son Kullanım Tarihi :</string>
    <string name="textview">TextView</string>
    <string name="alarm_kur">Alarm Kur</string>
    <string name="evet_lac_sil">Evet, İlacı Sil</string>
</resources>