<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView14"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tum_ilac_sil_indicator" />

        <ImageView
            android:layout_marginTop="15dp"
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tum_ilac_ilacsil_icon" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lac_sil"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/se_ti_iniz_ila_listenizden_silinecektir_sildi_iniz_ilac_tekrar_sisteme_kay_t_etmeniz_gerekecektir" />



        <TextView
            android:background="@drawable/ilac_sil_bot_sheet_bg"
            android:id="@+id/cancelBtn"
            android:text="@string/hay_r_ilac_silme"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/okBtn"
            android:layout_marginTop="5dp"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#F62828"
            android:text="@string/evet_lac_sil" />
    </LinearLayout>
</layout>