<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/ilacImage"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"



                ></ImageView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/la_smi"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"></TextView>

                <TextView
                    android:id="@+id/ilacIsmi"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ilac_ismi"
                    android:textSize="14sp"

                    ></TextView>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/barkodu"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAlignment="center"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"></TextView>

                <TextView
                    android:id="@+id/ilacBarkod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:text="@string/ilac_barkod"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    ></TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etken_maddesi"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAlignment="center"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"></TextView>

                <TextView
                    android:id="@+id/ilacEtkenMadde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ilac_etken_madde"
                    android:textStyle="bold"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retici_firma"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAlignment="center"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp" />

                <TextView
                    android:id="@+id/ilacUreticiFirma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ilac_uretici_firma"
                    android:textStyle="bold"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/re_ete_t_r"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp" />

                <TextView
                    android:id="@+id/ilacReceteTuru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/ilac_recete_turu"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faydalar"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"/>


                <TextView
                    android:id="@+id/ilacEndikasyon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/ilac_endikasyon"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"/>



            </LinearLayout>






        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="FULL_BANNER"
            app:adUnitId="ca-app-pub-5511459156486174/8141038532"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    </LinearLayout>


</layout>
