<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/a_a_da_bulunan_miad_uyar_s_resi_k_sm_na"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/ecza_dolab_n_zdaki_son_kullan_m_tarihi_yakla_an_ila_lar_n_z_n_size_ka_ay_kala_hat_rlat_lmas_n_istiyorsan_z_o_de_eri_girmelisiniz"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:text="@string/herhangi_bir_de_er_girmemeniz_durumunda_sistem_otomatik_olarak_3_ay_90_g_n_kala_miad_yakla_an_la_olarak_sizi_bilgilendirecektir"
                android:textAlignment="center"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".view.AyarlarFragment">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_weight="1"
                    android:text="@string/miad_uyari_s_resi_ay"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/miadUyariEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="2"
                    android:ems="10"

                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/kaydetButon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kaydet"
                android:textColor="@color/white" />


        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            app:adSize="MEDIUM_RECTANGLE"
            app:adUnitId="ca-app-pub-5511459156486174/6330313161"
            android:layout_marginTop="50dp"


            ></com.google.android.gms.ads.AdView>

    </LinearLayout>

</layout>