<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.eneserkocak.ilacprojem.SecimFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_home"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/la_rehberi"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/la_lar_n_z_bulun_ve_kaydedin"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eczaDolabim"
            android:layout_width="148dp"
            android:layout_height="102dp"

            android:layout_marginTop="-60dp"
            android:background="@drawable/home_ktphn_rectangle"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ilacKutuphanem"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/home_eczdolab_icon" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="119dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:text="@string/dolab_m"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="119dp"
                android:layout_height="17dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ecza"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ilacKutuphanem"
            android:layout_width="141dp"
            android:layout_height="105dp"


            android:background="@drawable/home_ktphn_rectangle"
            android:clickable="true"
            app:layout_constraintEnd_toStartOf="@+id/eczaDolabim"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/eczaDolabim">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="38dp"
                android:layout_height="29dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/home_ilac_ktphn" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/k_t_phanem"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                android:text="@string/la"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="296dp"
            android:layout_height="232dp"
            android:layout_marginBottom="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eczaDolabim"
            app:srcCompat="@drawable/home_frame_gorsel" />


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-5511459156486174/5734367041"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

